[gd_scene load_steps=13 format=3 uid="uid://dhcs5tdq41efv"]

[ext_resource type="Script" uid="uid://b5jj07qk2i16r" path="res://Scenes/player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://bwpnjf35tn6l6" path="res://Sprites/characters/Letch/Leech Animation Walking V.1.png" id="2_kyqiw"]
[ext_resource type="Texture2D" uid="uid://ccjou25f5b5kr" path="res://Sprites/Items/Hallowbane/Hallowbane1.png" id="3_gntrk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_52ee3"]
atlas = ExtResource("2_kyqiw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyqiw"]
atlas = ExtResource("2_kyqiw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gntrk"]
atlas = ExtResource("2_kyqiw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dewec"]
atlas = ExtResource("2_kyqiw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ixxa"]
atlas = ExtResource("2_kyqiw")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn08x"]
atlas = ExtResource("2_kyqiw")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bhhdu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ee3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyqiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gntrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dewec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ixxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn08x")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dewec"]
size = Vector2(31, 54.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gntrk"]
size = Vector2(34.75, 98)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_kyqiw")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bhhdu")
animation = &"idle"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 7.25)
shape = SubResource("RectangleShape2D_dewec")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true

[node name="WeaponSprite" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-5, 3)
rotation = -0.253073
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_gntrk")

[node name="WeaponHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHitbox"]
position = Vector2(31.625, 4)
shape = SubResource("RectangleShape2D_gntrk")

[connection signal="area_entered" from="WeaponHitbox" to="." method="_on_weapon_hitbox_area_entered"]
